feat: add WebSocket API openapi endpoints
